@@ -10,26 +10,67 @@
   <description>LE DB</description>
 
   <parent>
-  <groupId>com.latticeengines</groupId>
-    <artifactId>le-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+        <groupId>com.latticeengines</groupId>
+        <artifactId>le-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../le-parent</relativePath>
   </parent>
 
-    <properties>
+  <properties>
        <component-name>le-db</component-name>
-    </properties>
+  </properties>
 
-    <dependencies>
-    	<dependency>
-    		<groupId>org.springframework.data</groupId>
-    		<artifactId>spring-data-cassandra</artifactId>
-    		<version>1.1.0.RELEASE</version>
-    	</dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>4.0.0.RELEASE</version>
-        </dependency>
+  <profiles>
+        <profile>
+            <id>functional</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.version}</version>
+                        <executions>
+                            <execution>
+                                <id>unit-test</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>default-test</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>functional-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>integration-test</phase>
+                                <configuration>
+                                    <argLine>-XX:MaxPermSize=256m ${argLine}</argLine>
+                                    <skip>false</skip>
+                                    <includes>
+                                        <include>${functional.classes.include}</include>
+                                        <exclude>${functional.classes.exclude}</exclude>
+                                    </includes>
+                                    <groups>${functional.groups}</groups>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+    
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-cassandra</artifactId>
+      <version>1.1.0.RELEASE</version>
+    </dependency>
+  </dependencies>
 
-    </dependencies>
 </project>
